[gd_scene load_steps=9 format=2]

[ext_resource path="res://pickup/Pickup.gd" type="Script" id=1]
[ext_resource path="res://assets/abilities/ability_body.png" type="Texture" id=2]
[ext_resource path="res://assets/abilities/ability_outline_1.png" type="Texture" id=3]
[ext_resource path="res://utility/player_check/PlayerCheck.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0

[sub_resource type="CircleShape2D" id=2]
radius = 42.4264

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Outline:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 228.14

[node name="Pickup" type="RigidBody2D"]
collision_layer = 8
collision_mask = 8
mode = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 2.0
script = ExtResource( 1 )
attraction = 500

[node name="DistancingCollision" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 0.47451, 1 )
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Outline" type="Sprite" parent="."]
rotation = 1.38763
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Type" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 8

[node name="PickupCollision" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 2 )

[node name="RotatingOutline" type="AnimationPlayer" parent="."]
anims/start = SubResource( 3 )

[node name="MagnetArea" type="Area2D" parent="."]
collision_layer = 8

[node name="MagnetCollision" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource( 4 )

[node name="PlayerCheck" parent="." instance=ExtResource( 4 )]
wait_time = 60.0
allowed_distance = 2000.0

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_entered" from="MagnetArea" to="." method="_on_MagnetArea_body_entered"]
[connection signal="body_exited" from="MagnetArea" to="." method="_on_MagnetArea_body_exited"]
